<resources>
    <string name="app_name">Compliance</string>
    <string name="cadastre_texto"><u>Cadastre-se</u></string>
    <string name="recuperar_senha_texto">Esqueceu a senha?</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_login">Login</string>
    <string name="botao_enviar">Enviar</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="texto_inserir_email">Insira o endereço de e-mail cadastrado para recuperar a senha.</string>
    <string name="leia_termos"><u>Leia</u></string>
    <string name="termo_texto">Nullam venenatis erat sed bibendum aliquam. Ut turpis turpis, viverra eu eros eget, pellentesque dictum risus. Etiam consectetur, lorem sit amet laoreet aliquet, velit tellus fermentum nunc, ut facilisis massa nulla a magna. Nullam cursus id lectus eget rhoncus. Nam cursus, ante ut varius mollis, sapien diam maximus mauris, finibus congue nunc lectus nec purus. Donec luctus dictum fringilla.</string>
    <string name="texto_descricao">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vitae elit id quam ornare tristique. Aliquam vulputate turpis at quam ultricies tempor.</string>
    <string name="option_menu">&#8942;</string>
    <string name="recentes"><b>Ordem:</b> Mais Recentes</string>

    <string-array name="funcoes">
        <item>Função 1</item>
        <item>Função 2</item>
        <item>Função 3</item>
        <item>Função 4</item>
    </string-array>

    <string-array name="vinculos">
        <item>Vinculo 1</item>
        <item>Vinculo 2</item>
        <item>Vinculo 3</item>
        <item>Vinculo 4</item>
    </string-array>

    <string-array name="segmentos">
        <item>Segmento 1</item>
        <item>Segmento 2</item>
        <item>Segmento 3</item>
        <item>Segmento 4</item>
    </string-array>
    <string name="navigation_drawer_open">Abrir Navegação</string>
    <string name="navigation_drawer_close">Fechar Navegação</string>
    <string name="nav_header_title">Usuário Petrobras</string>
    <string name="nav_header_subtitle">usuario.petrobras@spassu.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="btn_entrar">Entrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
