<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:animateLayoutChanges="true"
    tools:context=".LoginActivity"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/petrobras" />

        <ImageView
            android:id="@+id/compliance_titulo"
            android:layout_below="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_alignRight="@+id/logo"
            android:layout_alignEnd="@+id/logo"
            app:srcCompat="@drawable/em_compliance"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/really1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/logo"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_bg"
                    android:drawableStart="@drawable/ic_account_box_24dp"
                    android:drawableLeft="@drawable/ic_account_box_24dp"
                    android:drawablePadding="3dp"
                    android:hint="@string/hint_login"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="100dp"/>

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_bg"
                    android:drawableStart="@drawable/ic_block_24dp"
                    android:drawableLeft="@drawable/ic_block_24dp"
                    android:drawablePadding="3dp"
                    android:hint="@string/hint_senha"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingRight="10dp"
                    android:paddingEnd="10dp" />

                <Button
                    android:id="@+id/btnEntrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_entrar"
                    android:textColor="@android:color/background_light" />



            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/really2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <Button
            android:id="@+id/linkSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/recuperar_senha_texto"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            android:paddingRight="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/colorPrimaryDark"
            />

        <Button
            android:id="@+id/linkCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="30dp"
            android:paddingRight="30dp"
            android:text="@string/cadastre_texto"
            android:textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>

</RelativeLayout>